tests/e2e/mutation_whitespace4.error
Error: syntax error in story at line 2, column 1

2|    a split by: "\n"
      ^

E0148: Service name expected but existing variable `a` found.
