tests/e2e/mutation_whitespace4.story
a = "foobar"
a split by: "\n"
